--- a/persons.html
+++ b/persons.html
@@ -247,6 +247,8 @@
                 <p><small>Аркадьев Михаил Владиславович</small></p>
                 <p><small>Питернов Алексей Юрьевич</small></p>
                 <p><small>Стеньшин Виктор Васильевич</small></p>
+                 <p><small>Васильева Елена Николаевна</small></p>
+                 <p><small>Карпушин Дмитрий Вячеславович</small></p>
             </div>
         </div>
 
@@ -262,9 +264,9 @@
         <div>
             <p><big>Контрольно-ревизионная комиссия</big></p>
             <div class="list">
-                <p><small>Васильева Елена Николаевна</small></p>
-                <p><small>Петров Александр Геннадьевич</small></p>
-                <p><small>Семенов Геннадий Германович</small></p>
+                <p><small>Горохов Александр Викторович</small></p>
+                <p><small>Фирсов Дмитрий Николаевич</small></p>
+                <p><small>Янгаров Алексей Николаевич</small></p>
             </div>
         </div>
 
@@ -278,18 +280,26 @@
 
         <p><big>Структура местных (первичных) отделений</big></p>
 
-        <table>
-            <tr class="chapter-row">
-                <th class="chapter-cell">МО в г. Чебоксары</th>
-                <th class="chapter-cell">Милюхин Кирилл Владимирович</th>
-            </tr>
-            <tr>
-                <td>ПО в г. Новочебоксарске</td>
-                <td>Фирсов Дмитрий Николаевич</td>
-            </tr>
-        </table>
+        <div class="container-two">
+<div>
+<p class="names">МО в г. Чебоксары</p>
+</div>
+<div>
+<p class="names">Милюхин Кирилл Владимирович</p>
+</div>
+</div>
 
-    </div>
+
+<div class="container-three"> 
+<div>
+<p class="names-2">ПО в г. Новочебоксарске</p>
+</div>
+<div>
+<p class="names-3">Фирсов Дмитрий Николаевич</p>
+</div>
+</div>
+
+</div>
 
 
     <div>
